<resources>
    <string name="app_name">Github User</string>

    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="followers">Followers</string>
    <string name="following">following</string>
    <string name="company">company</string>
    <string name="location">location</string>
    <string name="repository">Repository</string>
    <string name="avatar">avatar</string>
    <string name="search">Search user</string>
    <string name="darkmode">Dark Mode</string>
    <string name="favorite">Favorite</string>

    <string name="dummy_repository">3</string>
    <string name="tab_left">Followers</string>
    <string name="tab_right">Following</string>
    <string name="not_found">Data not found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>